# Omoide

./: .pylintrc  LICENSE  README.md  omoide.service  pyproject.toml  runserver.sh
.github/workflows/: pythonapp.yml
documentation/russian/: architecture.md  expenses.md  flow.md  questions.md  scheme.md  scheme_static.drawio  source.md  update.md
example/: main.py
example/app_database/: database.db
example/content/: database.db
example/database/: 2021-07-17_database.db  database.db
example/sources/: root.db
example/storage/: root.db
omoide/: __main__.py  constants.py  manage.py  utils.py
omoide/application/: app.py  app_factory.py  appearance.py  cache.py  class_paginator.py  class_web_query.py  database.py  factories.py  logic.py  navigation.py  runserver.py
omoide/commands/: __init__.py  command_line.py  instances.py  perform.py  walking.py
omoide/constants/: __init__.py  project.py  search.py  server.py  storage.py
omoide/core/: __init__.py  class_filesystem.py  class_group.py  class_identity_master.py  class_implicit_tag.py  class_meta.py  class_realm.py  class_renderer.py  class_statistics.py  class_stdout.py  class_synonym.py  class_theme.py  class_user.py  class_uuid_master.py  constants.py  core_utils.py  extend.py  hints.py  transfer_objects.py
omoide/database/: common.py  constants.py  operations.py  utils.py
omoide/essence/: __init__.py  class_relocation.py  class_sql.py  transient.py
omoide/files/: constants.py  operations.py
omoide/incarnation/: __init__.py
omoide/infra/: __init__.py  class_filesystem.py  class_stdout.py  (+1 more)
(+228 files in other folders)
