[tool.poetry]
name = "omoide"
version = "0.1.0"
description = "Media content storing and filtering system"
authors = ["IgorZyktin <nicord@yandex.ru>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
